Colour Pots Edit:  - preview area uses chequered background to allow transparency of colour pot elements to be shown. This includes the CP-Edit preview and the CP-view preview (both large preview area and tiny, per-row preview)  - update to logic.DrawFromColourPot(), to fix hue-wrap around bug when drawing from range  - logic.DrawFromColourPot() improvement so that transparency supported (note that it uses helper functions from edit_cp).

--- a/css-colour-pots-edit.css
+++ b/css-colour-pots-edit.css
@@ -122,6 +122,7 @@
 }
 
 #colour-pots-edit .preview-container{
+    background-color: white;
     width: 190px;
 }
 
@@ -221,6 +222,11 @@
     background-size:auto 10px;
     border: 1px solid black;
 }
+
+.chequer.tiny{
+    background-size:auto 4px;
+}
+
 
 
 .cp-item-container .chequer{
