--- a/css-colour-pots-view.css
+++ b/css-colour-pots-view.css
@@ -39,6 +39,7 @@
     height: 260px;
     top: 129px;
     right: 14px;
+    background-color: white;
 }
 
 /* BUTTONS - positioning - within "View Colour Pot" */
